<resources>
    <string name="app_name">Heritage VideoMeet</string>
    <string name="help"> How to Login app ? </string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="contact">Contact</string>
    <string name="login_help">LOGIN HELP</string>
    <string name="dropbox_app_key">bdu13ij0c1pt9kx</string>


    //help page

    <string name="Account_Related">
         ->   Enter Correct UserId (EmailAddress), Unique_ID, Password to login into the app.
    </string>

    <string name="Password_Related">
         ->   For Resetting Your Password Please Contact to Admin.
    </string>

    <string name="Profile_Related">
         ->   For Viewing Your Profile Details, Click on Floating Icon on HomePage and Select Profile.
    </string>

    <string name="LogOut_Related">
         ->   Click on Logout Icon.
    </string>

    <string name="AddMeetingPassword">
         ->   To secure Meeting, Enter a Strong password.  To add on Password check Settings.
    </string>

    <string name="AddMeetingName">
         ->   After Joining in Meeting, Click on Chat Option to Set and Display Your Name.
    </string>

    <string name="Share_Related">
         ->   After Generating AutoId click on Schedule Button to select Date, Time, and Write Subject Name ( Optional ) to Share Meeting code on Your Preference Basis.
    </string>

    <string name="ID_Related">
         ->   Click on AutoId to Generate Meeting ID.
    </string>

    <string name="Tileview_Related">
         ->   After Joining in Meeting Click on 3dots > More Options > Exit/Enable Tile View according to your Need.
    </string>

    <string name="Join_Related">
         ->   Enter Meeting Id Accurately to Join OR Generate an AutoId to Join.
    </string>

    <string name="LobbyMode">
         ->   Lobby Mode is a Feature which lets you Protect your Meeting by only Allowing people to enter after a Formal Approval by a Host.
                To turn on this feature check Settings.
        \t\n\n \** For Moderator Issue, If you are Enabling this Feature then Must add Meeting Password, Remember it if you Leave after turned on this Feature then You can\'t Rejoin Again if You haven\'t Meeting Password. \**
    </string>

    <string name="LowBandwidthMode">
         ->   Low Bandwidth Mode is a Feature in which user only receives Audio and Screen Sharing.
                To turn on this feature check Settings.
    </string>

    <!--<string name="Support_Related">
         ->   Click on ThreeDots in HomePage and select Support Option to Know More About Our Academy OR You can Simply Goto Intro Page (Before LOGIN) to Know More....
    </string>

    <string name="Contact_Related">
         ->   Click on ThreeDots > Support > Contact Us/Visit Our Website to Contact With Our Academy OR Simply Goto Intro Page (Before LOGIN), click on Contact option to connect with us via Social Media.
    </string>-->

    <string name="Intro">

    At O2 Academia - We Take Utmost Care to Give Attention to Individual Students Along With Imparting The Right Knowledge.
        \n\n Take A Quick Ride Of O2 Academia, Not Just Distributing Study Materials, The Institute Offers Demo Sessions to Get A Flair Of What Actually Happens On The Insides…

        \n\n \" Aggressively Fight For You. \"

    \n \" Your Interest Always Comes First. \"

    \n \" Experienced Educators. \"

    \n \" Honesty and Integrity Set Us Apart. \"

    </string>

    <string name="Intro1">

        \n Your Future Starts Here

        \n\n \" Don\'t Waste Your Time. \n Beating In The Bush, you Can Join Either Our Classroom Programme Or Online Courses to Crack Govt. Exams For A Secure Future. \"
    </string>


</resources>